<resources>
    <string name="app_name">Coffee Order App</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="order_button_text">Order</string>
    <string name="initial_price">$0</string>
    <string name="price_label">Price</string>
    <string name="initial_quantity">0</string>
    <string name="quantity_label">Quantity</string>
    <string name="slogan">We are provide best quality coffee at affordable price</string>
    <string name="greet_message">Welcome to Coffee stall</string>
    <string name="order_summary">Order summary</string>
    <string name="how_many_do_you_need">How many do you need?</string>
    <string name="description_text">Double espresso, Steamed milk foam,Hot milk</string>

    <string name="americano">Americano</string>
    <string name="black_coffee">Black coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="mocha">Mocha</string>
    <string name="latte">Latte</string>
    <string name="espresso">Espresso</string>

    <string name="americano_desc">Espresso, Hot water</string>
    <string name="black_coffee_desc">Chocolate, Steamed milk foam</string>
    <string name="cappuccino_desc">Double espresso, Steamed milk foam</string>
    <string name="mocha_desc">Chocolate, Espresso, Hot milk</string>
    <string name="latte_desc">Espresso, Milk</string>
    <string name="espresso_desc">Double espresso, Hot milk</string>
    <string name="choose_your_drink">Choose your drink</string>

    <string name="americano_price">$3.24</string>
    <string name="black_coffee_price">$4.54</string>
    <string name="cappuccino_price">$3.21</string>
    <string name="mocha_price">$2.23</string>
    <string name="latte_price">$3.54</string>
    <string name="espresso_price">$5.24</string>

    <string-array name="coffee_names">
        <item>Americano</item>
        <item>Black coffee</item>
        <item>Cappuccino</item>
        <item>Mocha</item>
        <item>Latte</item>
        <item>Espresso</item>
    </string-array>

    <string-array name="coffee_description">
        <item>Espresso, Hot water</item>
        <item>Chocolate, Steamed milk foam</item>
        <item>Double espresso, Steamed milk foam</item>
        <item>Chocolate, Espresso, Hot milk</item>
        <item>Espresso, Milk</item>
        <item>Double espresso, Hot milk</item>
    </string-array>

    <string-array name="coffee_prices">
        <item>3.24</item>
        <item>4.54</item>
        <item>3.21</item>
        <item>2.23</item>
        <item>3.54</item>
        <item>5.24</item>
    </string-array>
</resources>