<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/coffee" />

        <TextView
            android:id="@+id/header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/greet_message"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_text_view"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/slogan"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/quantity_label"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/width_48dp"
            android:layout_height="@dimen/width_48dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:onClick="decrement"
            android:text="@string/decrement" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16sp" />

        <Button
            android:layout_width="@dimen/width_48dp"
            android:layout_height="@dimen/width_48dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:onClick="increment"
            android:text="@string/increment" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/price_label"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/initial_price"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button_text" />

</LinearLayout>