<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:fontFamily="serif"
        android:text="@string/how_many_do_you_need"
        android:textColor="@color/gold"
        android:textSize="@dimen/text_size_45sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:src="@drawable/coffee_cup" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="Cappuccino"
        android:textColor="@color/light_gray"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/description_text"
        android:textColor="@color/dark_gray"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/circle"
            android:gravity="center_horizontal"
            android:text="@string/decrement"
            android:textSize="27sp"
            android:textStyle="bold"
            app:backgroundTint="@color/button_color" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/initial_quantity"
            android:textAllCaps="true"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_size_45sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/circle"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/increment"
            android:textSize="27sp"
            android:textStyle="bold"
            app:backgroundTint="@color/button_color" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle"
            android:layout_margin="@dimen/margin_8dp"
            android:backgroundTint="@color/gold">

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:text="$ 10.52"
                android:textAllCaps="true"
                android:textColor="#403030"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_image_id"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="Order"
                android:textAllCaps="true"
                android:textColor="#403030"
                android:textStyle="bold"
                android:layout_toStartOf="@+id/arrow_image_id" />

            <ImageView
                android:id="@+id/arrow_image_id"
                android:layout_width="16dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:src="@drawable/arrow_right"
                android:layout_alignParentRight="true"
                android:scaleType="fitCenter"
                android:layout_marginRight="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_16dp" />

        </RelativeLayout>

<!--        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@drawable/rectangle"
            android:fontFamily="sans-serif-light"
            android:text="order"
            android:drawableRight="@drawable/arrow_right"
            android:textColor="#403030"
            android:textStyle="bold"
            app:backgroundTint="@color/gold" />-->
    </RelativeLayout>
    </LinearLayout>
</ScrollView>